--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <h1>O mnie</h1>
             <p>
-                Jestem 23 letnim poznaniakiem, którego pasją jest programowanie, gra na gitarze i chodzenie po górach. Studiuję obecnie na 5 roku kognitywistyki, gdzie piszę pracę magisterską z zakresu złożoności obliczeniowej metod dowodowych używanych w logice. Kognitywistyka pozwoliła mi rozwinąć się multidyscyplinarnie, dając mi umiejętności z zakresu statystyki, informatyki, neuronauki etc. Jak wiadomo jednak jeżeli ktoś wie trochę o wszystkim, to wie wszystko o niczym. Zdecydowałem się zacząć w tym roku studia z infromatyki aby już zdobytą wiedzę wykorzystywać w praktyce w obszarze, który mnie interesuje.
+                Jestem 23-letnim poznaniakiem, którego pasją jest programowanie, gra na gitarze i turystyka górska. Obecnie studiuję na 5 roku kognitywistyki i realizuję pracę magisterską dotyczącą złożoności obliczeniowej metod dowodowych używanych w logice. Kognitywistyka umożliwiła mi multidyscyplinarny rozwój, czemu zawdzięczam umiejętności z między innymi zakresu statystyki, informatyki, psychologii oraz neuronauki. Mówi się, że jeżeli ktoś wie trochę o wszystkim, to wie wszystko o niczym, dlatego zdecydowałem się poszerzyć już zdobytą wiedzę na studiach informatycznych, aby w przyszłości móc ją wykorzystywać w praktyce.
             </p>
             <p>
-              Jestem człowiekiem który szybko się uczy, ma niezłe poczucie humoru, mało je i nie brudzi. Dodatkowo umiem mówić po angielsku na poziomie B2, także jestem stworzony do czytania angielskiej dokumentacji. Mam też prawo jazdy i Skodę Fabię, którą kocham i nienawidzę jednocześnie.
+              Jestem człowiekiem który szybko się uczy, ma niezłe poczucie humoru (chyba), mało je (nieprawda) i nie brudzi. Dodatkowo posługuję się angielskim w stopniu komunikatywnym (B2), także jestem stworzony do czytania angielskiej dokumentacji. Mam też prawo jazdy kat. B  oraz Skodę Fabię, którą kocham i nienawidzę jednocześnie.
             </p>
             <p style="text-indent: 0">Moje Curriculum Vitae jest dostępne <a href="cv/curriculum-vitae.pdf">TUTAJ</a>.</p>
         </div>
